сделал логи а также аутентификацию

--- a/Hotel.ATR.Portal/appsettings.json
+++ b/Hotel.ATR.Portal/appsettings.json
@@ -1,9 +1,14 @@
 {
   "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "LogLevel": {
+    "Default": "Information",
+   "Microsoft.AspNetCore": "Warning"
+   }
+  },
+  "ConnectionStrings": {
+    "DemoSeriLogDB": "Server=3306;Database=hotelatr;Uid=root;Pwd=Or@z2003;"
   },
   "AllowedHosts": "*"
 }
+
+//Server=myServerAddress;Database=myDataBase;Uid=myUsername;Pwd=myPassword;
