были реализованы фильтры

--- a/Hotel.ATR.Portal/Hotel.ATR.Portal.csproj
+++ b/Hotel.ATR.Portal/Hotel.ATR.Portal.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Resources\Controllers\" />
     <Folder Include="wwwroot\Logs\" />
   </ItemGroup>
 
